crates/lash/tests/ui/effect_host_activation_methods_are_removed.rs
async fn check(
    session: lash::LashSession,
    scope: lash::runtime::ScopedEffectController<'_>,
) {
    let _ = session
        .host_events()
        .emit_with_effect_host("Button", "ui.button", "pressed", serde_json::json!({}), scope.controller())
        .await;
    let _ = session
        .triggers()
        .activate_with_effect_host("trigger:1", serde_json::json!({}), scope.controller())
        .await;
    let _ = session
        .triggers()
        .activate_source_type_with_effect_host("ui.button.pressed", serde_json::json!({}), scope.controller())
        .await;
}

fn main() {}
